--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mysql://localhost:3306/BestForPets?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:21260/railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=root
-spring.datasource.password=Enzomartinez2412
+spring.datasource.password=DMzgkJiXCHelikowWlqGRozcEqXrotXr
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
