--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,4 @@ springdoc.swagger-ui.path=/swagger-ui.html
 file.upload-dir=src/main/resources/static/uploads/
 
 
-app.url=http://bestforpets-production.up.railway.app
+app.url=http://localhost:8080
